añado gradientes, animaciones y transiciones a mi index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@100&display=swap" rel="stylesheet">
 
+    <!-- link animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
     <link rel="stylesheet" href="css/main.css">
 
     <title>Bunker Omega | GYM</title>
@@ -36,7 +39,8 @@
                 <h1>El Bunker Omega</h1>
             </div>
             <div class="subtitulo1">
-                <h2>Entrenamiento 100% personalizado</h2>
+                <!-- aca agrego la aniamcion -->
+                <h2 class="animate__animated animate__fadeInLeft">Entrenamiento 100% personalizado</h2>
             </div>
             
         </header>
