elimino br de mi index

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <section class="sectionF">
 
             <p class="frase">
-                | ENTRENA DE FORMA <br> DIFERENTE <br>
-                EN UN LUGAR <br> UNICO |
+                <span>| ENTRENA DE FORMA</span> <span class="colorF">DIFERENTE</span>
+                <span>EN UN LUGAR</span> <span class="colorF">UNICO |</span>
             </p>
 
         </section>
