maqueto pagina contactanos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="bodyIndex">
 
-        <header>
+        <header class="headerI">
 
             <div>
                 <img class="logo1" src="img/logo2.jpg" alt="">
@@ -45,7 +45,7 @@
             
         </header>
 
-        <section class="sectionM">
+        <main class="sectionM">
 
             <nav class="menu">
                 <ul>
@@ -67,7 +67,7 @@
                 </ul>
             </nav>
 
-        </section>
+        </main>
 
         <section class="sectionF">
 
