--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -17,6 +17,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@100&display=swap" rel="stylesheet">
 
+    <!-- link de animate css -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
     <link rel="stylesheet" href="../css/main.css">
 
     <title>Contactanos</title>
@@ -57,7 +63,7 @@
         </header>
         
         <main class="info">
-            <h2 class="tituloP">
+            <h2 class=" animate__animated animate__bounce tituloP">
                 contactanos
             </h2>
         
