agrego rama con el desafio utilizando SASS

--- a/index.html
+++ b/index.html
@@ -33,13 +33,12 @@
         <header class="headerI">
 
             <div>
-                <img class="logo1" src="img/logo2.jpg" alt="">
+                <img src="img/logo2.jpg" alt="">
             </div>
-            <div class="titulo1">
+            <div>
                 <h1>El Bunker Omega</h1>
             </div>
-            <div class="subtitulo1">
-                <!-- aca agrego la aniamcion -->
+            <div>
                 <h2 class="animate__animated animate__fadeInLeft">Entrenamiento 100% personalizado</h2>
             </div>
             
@@ -47,7 +46,7 @@
 
         <main class="sectionM">
 
-            <nav class="menu">
+            <nav>
                 <ul>
                     <li>
                         <a href="index.html">Home</a>
@@ -71,40 +70,39 @@
 
         <section class="sectionF">
 
-            <p class="frase">
-                <span>| ENTRENA DE FORMA</span> <span class="colorF">DIFERENTE</span>
-                <span>EN UN LUGAR</span> <span class="colorF">UNICO |</span>
+            <p>
+                | ENTRENA DE FORMA <span>DIFERENTE</span>
+                EN UN LUGAR <span>UNICO |</span>
             </p>
 
         </section>
 
-        <section class="video1">
+        <section class="sectionV">
 
-            <video class="video" autoplay="1" loop="1" controls muted src="img/SUPER VIDEO.mp4"></video>
+            <video autoplay="1" loop="1" controls muted src="img/SUPER VIDEO.mp4"></video>
 
         </section>
 
+        <section class="sectionR">
 
-            <section class="sectionR">
-
-                <div class="redes">
-                    <h3>
+            <div class="redes">
+                <h3>
                     Buscanos en las redes
-                    </h3>
-                </div>
+                </h3>
+            </div>
             
-                <div class="redes2">
-                    <a href="https://www.instagram.com/el_bunker_omega/" target="_blank">
-                    <img class="insta1" src="img/instaR.png" alt=""></a>
-                    <a href="https://www.facebook.com" target="_blank">
-                    <img class="insta1" src="img/faceR.png" alt=""></a>
-                    <a href="https://www.youtube.com/channel/UCQ0MMCCkJs7OzIOeqAuGxZg" target="_blank">
-                    <img class="insta1" src="img/youtube.png" alt=""></a>
-                </div>
+            <div class="redes2">
+                <a href="https://www.instagram.com/el_bunker_omega/" target="_blank">
+                <img src="img/instaR.png" alt=""></a>
+                <a href="https://www.facebook.com" target="_blank">
+                <img src="img/faceR.png" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCQ0MMCCkJs7OzIOeqAuGxZg" target="_blank">
+                <img src="img/youtube.png" alt=""></a>
+            </div>
 
-            </section>
+        </section>
 
-        <footer>
+        <footer class="footerI">
 
             <h4>
                 todos los derechos reservados | Pagina web creada por Lautaro Sandrini
