--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -28,15 +28,15 @@
 
 <body class="bodyP">
     
-    <header class="headerP">
+    <header class="headerA">
 
-            <a href="../index.html"><img class="logoHome" src="../img/logo2.jpg" alt=""></a>
+            <a href="../index.html"><img src="../img/logo2.jpg" alt=""></a>
 
-            <h1 class="tPage">
+            <h1>
                 Bunker Omega | Entrenamiento 100% personalizado
             </h1>
 
-            <nav class="menu2">
+            <nav>
                 <ul>
                     <li>
                         <a href="../index.html">Home</a>
@@ -60,7 +60,7 @@
 
     <main>
 
-        <h2 class="tituloP">
+        <h2>
             Actividades
         </h2>
 
@@ -98,9 +98,9 @@
 
 
     
-    <div class="container-fluid">
-        <footer class="row">
-            <h2 class="col-12 text-end">
+    <div>
+        <footer>
+            <h2>
                 Todos los derechos reservados | Pagina web creada por Lautaro Sandrini
             </h2>
         </footer>
