aplico SASS a todo mi proyecto

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 
         </section>
 
-        <footer class="footerI">
+        <footer>
 
             <h4>
-                todos los derechos reservados | Pagina web creada por Lautaro Sandrini
+                Todos los derechos reservados | Pagina web creada por Lautaro Sandrini
             </h4>
 
         </footer>
