--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -23,17 +23,17 @@
 
 </head>
 
-<body class="bodyP">
+<body class="bodyG">
 
-    <header class="headerP">
+    <header class="headerG">
 
-        <a href="../index.html"><img class="logoHome" src="../img/logo2.jpg" alt=""></a>
+        <a href="../index.html"><img src="../img/logo2.jpg" alt=""></a>
 
-        <h1 class="tPage">
+        <h1>
             Bunker Omega | Entrenamiento 100% personalizado
         </h1>
 
-        <nav class="menu2">
+        <nav>
             <ul>
                 <li>
                     <a href="../index.html">Home</a>
@@ -57,22 +57,24 @@
 
     <main>
        
-        <h2 class="tituloP">
+        <h2>
             Galeria
         </h2>
 
         <div>
+            <h3>Imagenes</h3>
             <p>
-                <img class="img2" src="../img/bunker.jpeg"  alt="">
-                <img class="img2" src="../img/Dani.jpeg"  alt="">
-                <img class="img2" src="../img/deadlift.jpeg"  alt="">
-                <img class="img3" src="../img/f&F.jpeg" alt="">
-                <img class="img2" src="../img/girls.jfif" alt="">
-                <img class="img2" src="../img/vale.jpg" alt="">
+                <img src="../img/bunker.jpeg"  alt="">
+                <img src="../img/Dani.jpeg"  alt="">
+                <img src="../img/deadlift.jpeg"  alt="">
+                <img class="img2" src="../img/f&F.jpeg" alt="">
+                <img src="../img/girls.jfif" alt="">
+                <img src="../img/vale.jpg" alt="">
             </p>
         </div>
 
         <div>
+            <h3>videos</h3>
             <iframe width="310" height="200" src="https://www.youtube.com/embed/qKgyykzsUsM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
             <video width="300px" controls src="../img/SUPER VIDEO.mp4"></video>
@@ -81,9 +83,9 @@
     </main>
 
     <footer>
-        <h2 class="footG">
+        <h4>
             Todos los derechos reservados | Pagina Creada por Lautaro Sandrini
-        </h2>
+        </h4>
     </footer>
 
 </body>
