agrego nuevo logo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <header class="headerI">
 
             <div>
-                <img src="img/logo2.jpg" alt="">
+                <img src="img/Logo0.png" alt="">
             </div>
             <div>
                 <h1>El Bunker Omega</h1>
