--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -34,7 +34,7 @@
     <header class="headerC">
 
         <div>
-            <a href="../index.html"><img src="../img/logo2.jpg" alt=""></a>
+            <a href="../index.html"><img src="../img/Logo0.png" alt=""></a>
                 
             <h1>
                 Bunker Omega | Entrenamiento 100% personalizado
