--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -27,7 +27,7 @@
 
     <header class="headerG">
 
-        <a href="../index.html"><img src="../img/logo2.jpg" alt=""></a>
+        <a href="../index.html"><img src="../img/Logo0.png" alt=""></a>
 
         <h1>
             Bunker Omega | Entrenamiento 100% personalizado
