--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -30,7 +30,7 @@
 
     <header class="headerSn">
         
-        <a href="../index.html"><img src="../img/logo2.jpg" alt=""></a>
+        <a href="../index.html"><img src="../img/Logo0.png" alt=""></a>
         <h1>
             Bunker Omega | Entrenamiento 100% personalizado
         </h1>
