agrego el menu de bootstrap a mis html

--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -30,30 +30,40 @@
     
     <header class="headerA">
 
-        <a href="../index.html"><img src="../img/Logo0.png" alt=""></a>
-        <h1>
-                Bunker Omega | Entrenamiento 100% personalizado
-        </h1>
-
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">Home</a>
-                </li>
-                <li>
-                    <a href="contactanos.html">Contactanos</a>
-                </li>
-                <li>
-                    <a href="sobreNosotros.html">Sobre nosotros</a>
-                </li>
-                <li>
-                    <a href="actividades.html">Actividades</a>
-                </li>
-                <li>
-                    <a href="galeria.html">Galeria</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/index.html"><img
+                    src="/img/logo2.jpg" alt="Home"></a>        
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse d-flex" id="navbarNav">
+                <ul class="navbar-nav d-flex">
+                  <li class="nav-item">
+                    <a class="nav-link" href="/index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contactanos.html">contactanos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="sobreNosotros.html">sobre nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="actividades.html">actividades</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="galeria.html">galeria</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
         </nav>
+
+        <div>   
+            <h1>
+                Bunker Omega | Entrenamiento 100% personalizado
+            </h1>
+        </div>
 
     </header>
 
@@ -66,7 +76,7 @@
         <div class="container">
             <table class="table">
                 <thead>
-                  <tr>
+                  <tr class="titulo-tabla">
                     <th scope="col-6">actividad</th>
                     <th scope="col-6">dias y horarios</th>
                   </tr>
