--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@100&display=swap" rel="stylesheet">
 
+    <!-- link de BS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <!-- link animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
@@ -32,39 +35,45 @@
 
         <header class="headerI">
 
-            <div>
-                <img src="img/Logo0.png" alt="">
-            </div>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="index.html"><img
+                        src="img/Logo0.png" alt="Home"></a>        
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse d-flex" id="navbarNav">
+                    <ul class="navbar-nav d-flex">
+                      <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="pages/contactanos.html">contactanos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="pages/sobreNosotros.html">sobre nosotros</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="pages/actividades.html">actividades</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="pages/galeria.html">galeria</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+            
+        </header>
+
+        <main class="sectionM">
+
             <div>
                 <h1>El Bunker Omega</h1>
             </div>
             <div>
                 <h2 class="animate__animated animate__fadeInLeft">Entrenamiento 100% personalizado</h2>
             </div>
-            
-        </header>
-
-        <main class="sectionM">
-
-            <nav>
-                <ul>
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="pages/contactanos.html">Contactanos</a>
-                    </li>
-                    <li>
-                        <a href="pages/sobreNosotros.html">Sobre nosotros</a>
-                    </li>
-                    <li>
-                        <a href="pages/actividades.html">Actividades</a>
-                    </li>
-                    <li>
-                        <a href="pages/galeria.html">Galeria</a>
-                    </li>
-                </ul>
-            </nav>
 
         </main>
 
@@ -111,6 +120,9 @@
         </footer>
 
     </div>
+
+    <!-- link de JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
 
