--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -30,34 +30,34 @@
     
     <header class="headerA">
 
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html"><img
-                    src="/img/logo2.jpg" alt="Home"></a>        
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse d-flex" id="navbarNav">
-                <ul class="navbar-nav d-flex">
-                  <li class="nav-item">
-                    <a class="nav-link" href="/index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contactanos.html">contactanos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="sobreNosotros.html">sobre nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="actividades.html">actividades</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="galeria.html">galeria</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-        </nav>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/index.html"><img
+            src="/img/Logo0.png" alt="Home"></a></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/contactanos.html">contactanos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/sobreNosotros.html">sobre nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/actividades.html">actividades</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/galeria.html">galeria</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
         <div>   
             <h1>
