--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -30,7 +30,7 @@
 
     <header class="headerG">
 
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/index.html"><img
             src="/img/Logo0.png" alt="Home"></a></a>
