--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -33,7 +33,7 @@
 
     <header class="headerSn">
 
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/index.html"><img
             src="/img/Logo0.png" alt="Home"></a></a>
