--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
 </head>
 
-<body>
+<body class="bodyIndex">
 
-    <div class="bodyIndex">
+    
 
         <header class="headerI">
 
@@ -43,7 +43,7 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex">
                     <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
@@ -118,7 +118,7 @@
 
         </footer>
 
-    </div>
+    
 
     <!-- link de JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
