--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -52,7 +52,7 @@
                 <a class="nav-link" href="actividades.html">actividades</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/galeria.html">galeria</a>
+                <a class="nav-link" href="galeria.html">galeria</a>
               </li>
             </ul>
           </div>
