--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -46,19 +46,19 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/contactanos.html">contactanos</a>
+                    <a class="nav-link" href="contactanos.html">contactanos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/sobreNosotros.html">sobre nosotros</a>
+                    <a class="nav-link" href="sobreNosotros.html">sobre nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/actividades.html">actividades</a>
+                    <a class="nav-link" href="actividades.html">actividades</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/galeria.html">galeria</a>
+                    <a class="nav-link" href="galeria.html">galeria</a>
                   </li>
                 </ul>
               </div>
