--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contactate con el bunker Omega Gym. Consulta las redes sociales, telefono y direccion. Acercate y forma parte vos tambien">
+    <meta name="keywords" content="gimnasio, gym, crossfit, boxeo, kickboxing, powerlifting, Lugano, Capital Federal, contacto, contactanos, telefono, direccion, redes, redes sociales, sumate, forma parte, entrena">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,10 +19,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@100&display=swap" rel="stylesheet">
 
-    <!-- link de BS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <!-- link de animate css -->
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -28,7 +28,7 @@
 
     <link rel="stylesheet" href="../css/main.css">
 
-    <title>Contactanos</title>
+    <title>Contactanos - Bunker Omega | GYM</title>
 
 </head>
 
