--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <meta name="description" content="Galeria visual del Gimnasio Bunker Omega. Encontra las mejores imagenes y videos de nuestras actividades, alumnos y profesionales">
+    <meta name="keywords" content="gimnasio, gym, crossfit, boxeo, kickboxing, powerlifting, Lugano, Capital Federal, galeria, fotos, videos, entrenamiento, alumnos, alumnas, profesores, profesoras, antes y despues, fitness, fit">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -17,12 +19,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@100&display=swap" rel="stylesheet">
 
-    <!-- link de BS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../css/main.css">
    
-    <title>Galeria</title>
+    <title>Galeria - Bunker Omega | GYM</title>
 
 </head>
 
