--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Conoce a quienes hacen del bunker Omega el mejor gimansio. Un poco de nuestra historia y nuestro equipo de profesionales">
+    <meta name="keywords" content="gimnasio, gym, crossfit, boxeo, kickboxing, powerlifting, Lugano, Capital Federal, nosotros, sobre nostros, historia, equipo, profesores, profesoras profesionales, conocenos, entrenadores, entrenadoras">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,16 +19,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@100&display=swap" rel="stylesheet">
 
-    <!-- link de BS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <!-- link de animate.css -->
-    <link
-    rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
     <link rel="stylesheet" href="../css/main.css">
     
-    <title>Sobre nosotros</title>
+    <title>Sobre nosotros - Bunker Omega | GYM</title>
 </head>
 
 <body class="bodySn">
