agrego mixin para los body

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h1>El Bunker Omega</h1>
     </div>
     <div>
-        <h2 class="animate__animated animate__fadeInLeft">Entrenamiento 100personalizado</h2>
+        <h2 class="animate__animated animate__fadeInLeft">Entrenamiento 100% personalizado</h2>
     </div>
 
   </main>
