mejoras en actividades

--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -79,22 +79,50 @@
       <table class="table">
         <thead>
           <tr class="titulo-tabla">
-            <th scope="col-6">actividad</th>
-            <th scope="col-6">dias y horarios</th>
+            <th scope="col">actividad</th>
+            <th scope="col">dia y horario</th>
+            <th scope="col">precio</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <th scope="row">Musculacion</th>
-            <td>Lun a Vier de 8 a 22hs/Sab de 10 a 15 hs</td>
+            <th scope="row">musculacion</th>
+            <td>Lun a Vier de 8 a 22hs / Sab de 10 a 15 hs</td>
+            <td>
+              <div>
+                2 veces por semana $3.000
+              </div>
+              <div>
+                3 veces por semana $3.500
+              </div>
+              <div>
+                4 veces por semana $3800
+              </div>
+              <div>
+                5 veces por semana $4.000
+              </div>
+          </td>
           </tr>
           <tr>
-            <th scope="row">Boxeo</th>
+            <th scope="row">boxeo</th>
             <td>Lun, Mierc y Juev 19-20-21 hs</td>
+            <td>
+              <div>
+                Grupal: 3 veces por semana $2.500
+              </div>
+            </td>
           </tr>
           <tr>
-            <th scope="row">kick boxing</th>
+            <th scope="row">kickboxing</th>
             <td>Lun, Mierc y Juev 15 hs</td>
+            <td>
+              <div>
+                Grupal: 3 veces por semana $2.000
+              </div>
+              <div>
+                personalizado: precio a coordinar
+              </div>
+            </td>
           </tr>
         </tbody>
       </table>
