--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -76,9 +76,9 @@
         Conocenos
       </h2>
       <p class="animate__animated animate__zoomIn">
-        <b>Somos un gimnasio ubicado en el barrio porteño de Villa Lugano. Contamos con mas de X años de experiencia y con grandes resultados que dan cuenta del duro trabajo que realizamos.
-        Hoy mas de X alumnos y amigos forman parte de la Familia del Bunker Omega y ¡continuamos creciendo!
-        Si querés conocer tu mejor versión, No dudes en vos tambien sumarte al Bunker Omega </b>.
+        <b>Somos un gimnasio ubicado en el barrio porteño de Villa Lugano. Contamos con mas de X años de experiencia y con resultados que dan cuenta del duro trabajo que realizamos.
+        Hoy mas de X alumnos y amigos forman parte de la Familia del Bunker Omega y ¡ continuamos creciendo !
+        Si querés conocer tu mejor versión, no lo dudes más y sumate al Bunker Omega </b>.
       </p>
     </div>
     
@@ -87,7 +87,7 @@
         Nuestro equipo
       </h2>
       <p class="animate__animated animate__zoomIn">
-        <b> Contamos con un staff de grandes profesionales  muy comprometidos. Nuestro equipo esta encabezado por Pablo Asorey, entrenador y atleta Powerlifter. </b>
+        <b> Encabezado por Pablo Asorey, entrenador y atleta Powerlifter, contamos con un staff de grandes profesionales muy comprometidos y dispuestos a ayudarte a que logres tus objetivos. </b>
       </p>
     </div>
 
