--- a/index.html
+++ b/index.html
@@ -111,11 +111,12 @@
   </section>
 
   <footer>
-
+    
     <h4>
       Todos los derechos reservados | Pagina web creada por Lautaro Sandrini
     </h4>
-
+    <a href=""><img src="img/gitlogo.png" alt=""></a>
+    
   </footer>
 
     <!-- link de JS -->
