--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -189,8 +189,17 @@
     <footer>
 
         <h4>
-            Todos los derechos reservados | Pagina web creada por Lautaro Sandrini
+            No te olvides de seguirnos en nuestras redes sociales
         </h4>
+        <div>
+            <a href="https://www.instagram.com/el_bunker_omega/" target="_blank"><img src="../img/instaR.png" alt=""></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="../img/faceR.png" alt=""></a>
+            <a href="https://www.youtube.com/channel/UCQ0MMCCkJs7OzIOeqAuGxZg" target="_blank"><img src="../img/youtube.png" alt=""></a>
+        </div>
+        <h5>
+            Todos los derechos reservados | Pagina web creada por Lautaro Sandrini
+        </h5>
+        <a href=""><img src="../img/gitlogo.png" alt=""></a>
 
     </footer>
 
