--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -98,7 +98,8 @@
     <img src="../img/equipo/pablo.jfif" alt="">  
     <img src="../img/equipo/flor.jfif" alt="">   
     <img src="../img/equipo/nico.jfif" alt="">   
-    <img src="../img/equipo/edu.jfif" alt="">   
+    <img src="../img/equipo/edu.jfif" alt="">
+    <img src="../img/equipo/valery.jfif" alt="">   
     <img src="../img/equipo/lago.jfif" alt="">
     <img src="../img/equipo/furci.jfif" alt=""> 
     <img src="../img/equipo/matikick.jfif" alt="">
@@ -108,9 +109,20 @@
   </section>
         
   <footer>
+
     <h3>
-      Todos los derechos reservados | Pagina web creada por Lautaro Sandrini
+      No te olvides de seguirnos en nuestras redes sociales
     </h3>
+    <div>
+      <a href="https://www.instagram.com/el_bunker_omega/" target="_blank"><img src="../img/instaR.png" alt=""></a>
+      <a href="https://www.facebook.com" target="_blank"><img src="../img/faceR.png" alt=""></a>
+      <a href="https://www.youtube.com/channel/UCQ0MMCCkJs7OzIOeqAuGxZg" target="_blank"><img src="../img/youtube.png" alt=""></a>
+    </div>
+    <h4>
+      Todos los derechos reservados | Pagina web creada por Lautaro Sandrini
+    </h4>
+    <a href=""><img src="../img/gitlogo.png" alt=""></a>
+    
   </footer>
 
     <!-- link de JS -->
