--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -131,9 +131,20 @@
   </main>
 
   <footer>
+    
     <h2>
-      Todos los derechos reservados | Pagina web creada por Lautaro Sandrini
+      No te olvides de seguirnos en nuestras redes sociales
     </h2>
+    <div>
+      <a href="https://www.instagram.com/el_bunker_omega/" target="_blank"><img src="../img/instaR.png" alt=""></a>
+      <a href="https://www.facebook.com" target="_blank"><img src="../img/faceR.png" alt=""></a>
+      <a href="https://www.youtube.com/channel/UCQ0MMCCkJs7OzIOeqAuGxZg" target="_blank"><img src="../img/youtube.png" alt=""></a>
+    </div>
+    <h3>
+      Todos los derechos reservados | Pagina web creada por Lautaro Sandrini
+    </h3>
+    <a href=""><img src="../img/gitlogo.png" alt=""></a>
+
   </footer>
     
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
