correcciones en footer

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <h4>
       Todos los derechos reservados | Pagina web creada por Lautaro Sandrini
     </h4>
-    <a href=""><img src="img/gitlogo.png" alt=""></a>
+    <a href="https://github.com/lautisandrini" target="_blank"><img src="img/gitlogo.png" alt=""></a>
     
   </footer>
 
