--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -143,7 +143,7 @@
     <h3>
       Todos los derechos reservados | Pagina web creada por Lautaro Sandrini
     </h3>
-    <a href=""><img src="../img/gitlogo.png" alt=""></a>
+    <a href="https://github.com/lautisandrini" target="_blank"><img src="../img/gitlogo.png" alt=""></a>
 
   </footer>
     
