--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -199,7 +199,7 @@
         <h5>
             Todos los derechos reservados | Pagina web creada por Lautaro Sandrini
         </h5>
-        <a href=""><img src="../img/gitlogo.png" alt=""></a>
+        <a href="https://github.com/lautisandrini" target="_blank"><img src="../img/gitlogo.png" alt=""></a>
 
     </footer>
 
