--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -76,8 +76,8 @@
         Conocenos
       </h2>
       <p class="animate__animated animate__zoomIn">
-        <b>Somos un gimnasio ubicado en el barrio porteño de Villa Lugano. Contamos con mas de X años de experiencia y con resultados que dan cuenta del duro trabajo que realizamos.
-        Hoy mas de X alumnos y amigos forman parte de la Familia del Bunker Omega y ¡ continuamos creciendo !
+        <b>Somos un gimnasio ubicado en el barrio porteño de Villa Lugano. Contamos con mas de 8 años de experiencia y con resultados que dan cuenta del duro trabajo que realizamos.
+        Hoy mas de 300 alumnos y amigos forman parte de la Familia del Bunker Omega y ¡ continuamos creciendo !
         Si querés conocer tu mejor versión, no lo dudes más y sumate al Bunker Omega </b>.
       </p>
     </div>
