--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contactanos.html">contactanos</a>
@@ -51,7 +51,7 @@
               <a class="nav-link" href="sobreNosotros.html">sobre nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="actividades.html">actividades</a>
+              <a class="nav-link active" href="actividades.html">actividades</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="galeria.html">galeria</a>
