--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -41,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contactanos.html">contactanos</a>
@@ -53,7 +53,7 @@
               <a class="nav-link" href="actividades.html">actividades</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="galeria.html">galeria</a>
+              <a class="nav-link active" href="galeria.html">galeria</a>
             </li>
           </ul>
         </div>
