--- a/index.html
+++ b/index.html
@@ -95,6 +95,17 @@
 
   <section class="sectionR">
 
+    <div>
+      <p>
+        <span>En EL BUNKER OMEGA somos apasionados por el entrenamiento.</span>
+        <span>Nuestro trabajo es ayudarte a crear tu mejor versión</span> 
+        <span>y por ello trabajamos en base a tus necesidades y objetivos.</span>
+        <span>Podes encontrar actividades como:</span>
+        <span>MUSCULACIÓN, CIRCUITOS, FUNCIONAL, BEXEO y KICKBOXING</span>
+        <span>¡Resultados garantizados!</span>
+      </p>
+    </div>
+
     <div class="redes">
       <h3>
         Buscanos en las redes
