correcciones para entrega final

--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -136,14 +136,14 @@
       No te olvides de seguirnos en nuestras redes sociales
     </h2>
     <div>
-      <a href="https://www.instagram.com/el_bunker_omega/" target="_blank"><img src="../img/instaR.png" alt=""></a>
-      <a href="https://www.facebook.com" target="_blank"><img src="../img/faceR.png" alt=""></a>
-      <a href="https://www.youtube.com/channel/UCQ0MMCCkJs7OzIOeqAuGxZg" target="_blank"><img src="../img/youtube.png" alt=""></a>
+      <a href="https://www.instagram.com/el_bunker_omega/" target="_blank"><img src="../img/instaR.png" alt="instagram"></a>
+      <a href="https://www.facebook.com" target="_blank"><img src="../img/faceR.png" alt="facebook"></a>
+      <a href="https://www.youtube.com/channel/UCQ0MMCCkJs7OzIOeqAuGxZg" target="_blank"><img src="../img/youtube.png" alt="youtube"></a>
     </div>
     <h3>
       Todos los derechos reservados | Pagina web creada por Lautaro Sandrini
     </h3>
-    <a href="https://github.com/lautisandrini" target="_blank"><img src="../img/gitlogo.png" alt=""></a>
+    <a href="https://github.com/lautisandrini" target="_blank"><img src="../img/gitlogo.png" alt="githublogo"></a>
 
   </footer>
     
