--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -81,37 +81,37 @@
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../img/salon1.jpeg" class="d-block w-100" alt="...">
+            <img src="../img/salon1.jpeg" class="d-block w-100" alt="salonGym">
           </div>
           <div class="carousel-item">
-            <img src="../img/salon3.jpeg" class="d-block w-100" alt="...">
+            <img src="../img/salon3.jpeg" class="d-block w-100" alt="salonGym">
           </div>
           <div class="carousel-item">
-            <img src="../img/salon4.jpeg" class="d-block w-100" alt="...">
+            <img src="../img/salon4.jpeg" class="d-block w-100" alt="salonGym">
           </div>
           <div class="carousel-item">
-            <img src="../img/salon6.jpeg" class="d-block w-100" alt="...">
+            <img src="../img/salon6.jpeg" class="d-block w-100" alt="salonGym">
           </div>
           <div class="carousel-item">
-            <img src="../img/deadlift.jpeg" class="d-block w-100" alt="...">
+            <img src="../img/deadlift.jpeg" class="d-block w-100" alt="deadlift">
           </div>
           <div class="carousel-item">
-            <img src="../img/lauuu.jfif" class="d-block w-100" alt="...">
+            <img src="../img/lauuu.jfif" class="d-block w-100" alt="entrenado">
           </div>
           <div class="carousel-item">
-            <img src="../img/girls.jfif" class="d-block w-100" alt="...">
+            <img src="../img/girls.jfif" class="d-block w-100" alt="chicas">
           </div>
           <div class="carousel-item">
-            <img src="../img/vale.jpg" class="d-block w-100" alt="...">
+            <img src="../img/vale.jpg" class="d-block w-100" alt="valegym">
           </div>
           <div class="carousel-item">
-            <img src="../img/ByN.jpeg" class="d-block w-100" alt="...">
+            <img src="../img/ByN.jpeg" class="d-block w-100" alt="pabloGym">
           </div>
           <div class="carousel-item">
-            <img src="../img/Dani.jpeg" class="d-block w-100" alt="...">
+            <img src="../img/Dani.jpeg" class="d-block w-100" alt="DaniGym">
           </div>
           <div class="carousel-item">
-            <img src="../img/box.jpeg" class="d-block w-100" alt="...">
+            <img src="../img/box.jpeg" class="d-block w-100" alt="boxeo">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -125,26 +125,26 @@
       </div>
 
       <p>
-        <img src="../img/salon1.jpeg" alt="">
-        <img src="../img/salon3.jpeg" alt="">
-        <img src="../img/salon4.jpeg" alt="">
-        <img src="../img/salon6.jpeg" alt="">
-        <img src="../img/salon9.jpeg" alt="">
-        <img src="../img/deadlift.jpeg" alt="">
-        <img src="../img/lauuu.jfif" alt="">
-        <img src="../img/f&F.jpeg" alt="">
-        <img src="../img/girls.jfif" alt="">
-        <img src="../img/vale.jpg" alt="">
-        <img src="../img/Dani.jpeg" alt="">
-        <img src="../img/box.jpeg" alt="">
-        <img src="../img/IMG_20210424_125723.jpg" alt="">
-        <img src="../img/IMG_20210925_180718.jpg" alt="">
-        <img src="../img/IMG_20211215_044934_615.jpg" alt="">
-        <img src="../img/ayd1.jpg" alt="">
-        <img src="../img/ayd2.jpg" alt="">
-        <img src="../img/ayd3.jpg" alt="">
-        <img src="../img/ayd4.jpg" alt="">
-        <img src="../img/ByN.jpeg" alt="">
+        <img src="../img/salon1.jpeg" alt="salonGym">
+        <img src="../img/salon3.jpeg" alt="salonGym">
+        <img src="../img/salon4.jpeg" alt="salonGym">
+        <img src="../img/salon6.jpeg" alt="salonGym">
+        <img src="../img/salon9.jpeg" alt="salonGym">
+        <img src="../img/deadlift.jpeg" alt="deadlift">
+        <img src="../img/lauuu.jfif" alt="lauGym">
+        <img src="../img/f&F.jpeg" alt="FloryFlavia">
+        <img src="../img/girls.jfif" alt="chicas">
+        <img src="../img/vale.jpg" alt="valeGym">
+        <img src="../img/Dani.jpeg" alt="Dani Gym">
+        <img src="../img/box.jpeg" alt="boxeo">
+        <img src="../img/IMG_20210424_125723.jpg" alt="peso muerto">
+        <img src="../img/IMG_20210925_180718.jpg" alt="jonyGym">
+        <img src="../img/IMG_20211215_044934_615.jpg" alt="sentadilla">
+        <img src="../img/ayd1.jpg" alt="antes y despues 1">
+        <img src="../img/ayd2.jpg" alt="antes y despues 2">
+        <img src="../img/ayd3.jpg" alt="antes y depsues pablo">
+        <img src="../img/ayd4.jpg" alt="antes y despues 3">
+        <img src="../img/ByN.jpeg" alt="pablo">
       </p>
       
     </div>
@@ -165,17 +165,16 @@
       No te olvides de seguirnos en nuestras redes sociales
     </h4>
   <div>
-      <a href="https://www.instagram.com/el_bunker_omega/" target="_blank"><img src="../img/instaR.png" alt=""></a>
-      <a href="https://www.facebook.com" target="_blank"><img src="../img/faceR.png" alt=""></a>
-      <a href="https://www.youtube.com/channel/UCQ0MMCCkJs7OzIOeqAuGxZg" target="_blank"><img src="../img/youtube.png" alt=""></a>
+      <a href="https://www.instagram.com/el_bunker_omega/" target="_blank"><img src="../img/instaR.png" alt="instagram"></a>
+      <a href="https://www.facebook.com" target="_blank"><img src="../img/faceR.png" alt="facebook"></a>
+      <a href="https://www.youtube.com/channel/UCQ0MMCCkJs7OzIOeqAuGxZg" target="_blank"><img src="../img/youtube.png" alt="youtube"></a>
   </div>
   <h5>
       Todos los derechos reservados | Pagina web creada por Lautaro Sandrini
   </h5>
-  <a href=""><img src="../img/gitlogo.png" alt=""></a>
+  <a href=""><img src="../img/gitlogo.png" alt="logogithub"></a>
   </footer>
 
-    <!-- link de JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
