--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -101,11 +101,11 @@
             Nuestras redes
         </h4>
         <a href="https://www.instagram.com/el_bunker_omega/" target="_blank">
-            <img src="../img/instaR.png" alt=""></a>
+            <img src="../img/instaR.png" alt="instagram"></a>
         <a href="https://www.facebook.com" target="_blank">
-            <img src="../img/faceR.png" alt=""></a>
+            <img src="../img/faceR.png" alt="facebook"></a>
         <a href="https://www.youtube.com/channel/UCQ0MMCCkJs7OzIOeqAuGxZg" target="_blank">
-            <img src="../img/youtube.png" alt=""></a>
+            <img src="../img/youtube.png" alt="youtube"></a>
 
     </section>
 
@@ -192,18 +192,17 @@
             No te olvides de seguirnos en nuestras redes sociales
         </h4>
         <div>
-            <a href="https://www.instagram.com/el_bunker_omega/" target="_blank"><img src="../img/instaR.png" alt=""></a>
-            <a href="https://www.facebook.com" target="_blank"><img src="../img/faceR.png" alt=""></a>
-            <a href="https://www.youtube.com/channel/UCQ0MMCCkJs7OzIOeqAuGxZg" target="_blank"><img src="../img/youtube.png" alt=""></a>
+            <a href="https://www.instagram.com/el_bunker_omega/" target="_blank"><img src="../img/instaR.png" alt="instagram"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="../img/faceR.png" alt="facebook"></a>
+            <a href="https://www.youtube.com/channel/UCQ0MMCCkJs7OzIOeqAuGxZg" target="_blank"><img src="../img/youtube.png" alt="youtube"></a>
         </div>
         <h5>
             Todos los derechos reservados | Pagina web creada por Lautaro Sandrini
         </h5>
-        <a href="https://github.com/lautisandrini" target="_blank"><img src="../img/gitlogo.png" alt=""></a>
+        <a href="https://github.com/lautisandrini" target="_blank"><img src="../img/gitlogo.png" alt="logogithub"></a>
 
     </footer>
 
-    <!-- link de JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
